# tutorial_dl-tuning

./: .gitignore  README.md  create_imagesets.py  example_imageset_creation.py  example_task_creation.m
example_ft-caffenet-icw/: deploy.prototxt  solver.prototxt  test.prototxt  train_and_test_net.sh  train_net.sh  train_val.prototxt
example_ft-caffenet-icw/blr15-fc8N2/: deploy.prototxt  train_val.prototxt
example_ft-caffenet-icw/blr15-poly/: solver.prototxt
example_ft-caffenet-icw/images_lists/: labels.txt  test.txt  train.txt  val.txt
id_2objects/: imageset_config.yml  train_and_test_net.sh  train_and_test_net_tester.sh
id_2objects/all-0/: solver.prototxt
id_2objects/all-0-tester/: solver.prototxt  train_val.prototxt
id_2objects/all-3/: deploy.prototxt  solver.prototxt  train_val.prototxt
id_2objects/images_lists/: labels.txt  test-tester.txt  test.txt  train.txt  val.txt
id_2objects_caffenet/: id_2objects.m  train_and_test_net.sh  train_and_test_net_tester.sh
id_2objects_caffenet/all-0/: solver.prototxt
id_2objects_caffenet/blr-0/: solver.prototxt
id_2objects_caffenet/images_lists/: labels.txt  test.txt  test_dummy.txt  train.txt  val.txt
id_2objects_caffenet/setup-tester/: solver.prototxt  train_val.prototxt
scripts/: parse_caffe_log.sh  plot_log.gnuplot  plot_log.m
scripts/matlab_utils/: check_input_dir.m  create_trainval_test_sets.m  explore_next_level_folder.m  registry_from_folder.m
scripts/python_utils/: create_train_val_test_sets.py  imageset_config.py
scripts/src/: CMakeLists.txt  classify_image_list_vvv17.cpp
scripts/src/classify_image_list_vvv17/: CMakeLists.txt  main.cpp
scripts/src/compute_mean_vvv17/: CMakeLists.txt  main.cpp
scripts/src/create_lmdb_vvv17/: CMakeLists.txt  main.cpp
